--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+certifi==2019.9.11
 Django==2.2.4
+django-rest-passwordreset==1.0.0
 djangorestframework==3.10.2
 pytz==2019.2
+sentry-sdk==0.11.2
 sqlparse==0.3.0
+urllib3==1.25.3
