--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ certifi==2019.9.11
 Django==2.2.4
 django-rest-passwordreset==1.0.0
 djangorestframework==3.10.2
+djangorestframework-stubs==1.0.0
 pytz==2019.2
 sentry-sdk==0.11.2
 sqlparse==0.3.0
+ujson==1.35
 urllib3==1.25.3
