--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 certifi==2019.9.11
+chardet==3.0.4
 Django==2.2.4
 django-rest-passwordreset==1.0.0
+django-stubs==1.1.0
 djangorestframework==3.10.2
 djangorestframework-stubs==1.0.0
+idna==2.8
+mypy==0.720
+mypy-extensions==0.4.1
 pytz==2019.2
+PyYAML==5.1.2
+requests==2.22.0
 sentry-sdk==0.11.2
 sqlparse==0.3.0
-ujson==1.35
+typed-ast==1.4.0
+typing-extensions==3.7.4
 urllib3==1.25.3
