--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+amqp==2.5.1
 backports.csv==1.0.7
+billiard==3.6.1.0
+celery==4.3.0
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
@@ -11,7 +14,10 @@ djangorestframework==3.10.2
 djangorestframework-stubs==1.0.0
 et-xmlfile==1.0.1
 idna==2.8
+importlib-metadata==0.23
 jdcal==1.4.1
+kombu==4.6.5
+more-itertools==7.2.0
 mypy==0.720
 mypy-extensions==0.4.1
 odfpy==1.4.0
@@ -26,5 +32,7 @@ typed-ast==1.4.0
 typing-extensions==3.7.4
 ujson==1.35
 urllib3==1.25.3
+vine==1.3.0
 xlrd==1.2.0
 xlwt==1.3.0
+zipp==0.6.0
